--- a/404.html
+++ b/404.html
@@ -1,18 +1,11 @@
 ---
 layout: default
-title: 404 Not Found!
-description: 找不到。
-keywords: PIZn, 404
+title: "404先生"
+permalink: 404.html
 ---
-<article class="main-article main-article-page">
-    <div class="violet-title">
-        <h3 class="violet-title-item">{{ page.title }}</h3>
-    </div>
-    <div class="violet-post">
-        <div class="main-article-contant">
-            <h4>很抱歉：</h4>
-            <p>您访问的是一个未知的页面，如果可以，请不要停留在这个页面太久。</p>
-            <p>尽快<a href="{{site.url}}">【返回首页】</a>!</p>
-        </div>
-    </div>
-</article>
+
+<div class="page">
+  <h1 class="page-title">你遇到了404先生～</h1>
+  <p class="lead">Oooooooooooooooooooooooooooooooooooooooops</p>
+  <a href="{{ site.baseurl }}">返回首页</a>
+</div>
